--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-.lead {color: blue;}
-td, h4, h6{font-family: 'Raleway', sans-serif;}
+.lead {color: #000000;}
+td, h4, h1{font-family: 'Raleway', sans-serif;}
 
+/* footer css*/
 html {
     position: relative;
     min-height: 100%;
@@ -14,14 +15,13 @@ body {
     bottom: auto;
     width: 100%;
 
-    height: 280px;
+    height: auto;
     background-color: #d7e9e7 ;
 }
 
 
 .container {
     width: auto;
-    max-width: 680px;
     padding: 0 15px;
 }
 .container .text-muted {
@@ -31,3 +31,137 @@ body {
     color: #000000;
 }
 
+.row {
+    margin-right: -15px;
+    margin-left: -15px;
+    text-align: center;
+}
+
+
+
+----
+    /*navigations menü */
+
+
+.navbar-brand {
+    /* float: left; */
+    height: 50px;
+    padding: 3px 15px;
+    font-size: 18px;
+    line-height: 20px;
+    position: absolute;
+    z-index: 11;
+    margin: 0 auto;
+    right: 42%;
+}
+
+
+.menu {
+    background-color: #009688;
+    border-color: #080808;
+}
+
+.navbar {
+    position: relative;
+    min-height: 50px;
+    margin-bottom: 0px;
+    border: 0px solid #000;;
+    border-radius:0px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #fff;
+}
+.nav > li > a {
+    position: relative;
+    display: block;
+    padding: 15px 11px;}
+
+.form-control{
+    border-color:#fff;
+    border-radius:0px;
+    background-color:transparent;
+}
+
+.btn-default-1 {
+    color: #fff;
+    background-color: transparent;
+    border-color: #fff;
+    border-radius: 0px;
+}
+
+.cart-heart a{display:inline-block;color:#fff;font-size:20px;padding:5px;}
+
+
+
+
+/*CROUSELE START///////////////////////////*/
+
+.carousel-caption {
+    position: absolute;
+    right: 15%;
+    bottom: 35px;
+    width: 100%;
+    max-height: 500px;
+    left: 15%;
+    z-index: 10;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #fff;
+    text-align: left;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, .6);
+}
+
+@media screen and (min-width:768px){
+    .carousel-caption h3{font-size: 52px;}
+    .carousel-caption p{font-size: 32px;}
+    .carousel-caption{padding-bottom:160px;}
+
+
+    .carousel-inner {
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+        max-height: 350px;
+    }
+
+
+}
+
+
+
+/*Arikel Felder */
+
+/* Style to article Author */
+.by-author {
+    font-style: italic;
+    line-height: 1.3;
+    color: #aab6aa;
+}
+
+.featured-article {
+    width: auto;
+    height: 350px;
+    position: relative;
+    margin-bottom: 1em;
+}
+
+.featured-article .block-title {
+    /* Position & Box Model */
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    /* background */
+    background: rgba(0,0,0,0.7);
+    /* Width/Height */
+    padding: .5em;
+    width: 100%;
+    /* Text color */
+    color: #fff;
+}
+
+.featured-article .block-title h2 {
+    margin: 0;
+}
