--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     bottom: auto;
     width: 100%;
 
-    height: 280px;
+    height: auto;
     background-color: #d7e9e7 ;
 }
 
@@ -51,66 +51,17 @@ body {
     height: 100%;
 }
 
-#wrapper{
-    width: 100%;
-    display: block;
-    margin: 0px;
-    position: relative;
-}
 
-.header{
-    display: block;
-    background-color: #f1f1f1;
-}
 
-.topnav{
-    display: block;
-}
-.topnav li{
-    margin: 0px 6px;
-}
-.header .topnav li a{
+.header li a{
     color: #000;
     font-size: 13px;
     padding: 3px 3px;
     font-weight: 200;
 }
-.followUs a{
-    float: left;
-}
 
-#wrapper .logo{
-    max-width: 160px;
-    padding: 8px 10px;
-    height: auto;
-    border-radius: 5px;
-}
-.logo img{
-    width: 100%;
-}
 
-#wrapper .menubar{
-    display: block;
-    margin: 0px;
-    min-height: inherit;
-    z-index: 9;
-    -webkit-transition: all 0.5s ease 0s;
-    -moz-transition: all 0.5s ease 0s;
-    -o-transition: all 0.5s ease 0s;
-    transition: all 0.5s ease 0s;
-    background-color: transparent;
-}
-#wrapper .menubar.navbar-fixed-top {
-    top: 24px;
-}
-#wrapper .menubar:hover{
-    background-color: #fff;
-    box-shadow: 0 1px 5px rgba(0,0,0,.05);
-}
-#wrapper .meffect{
-    background-color: #fff;
-    box-shadow: 0 1px 5px rgba(0,0,0,.05);
-}
+
 
 .header .menubar li a{
     color: #000;
@@ -130,76 +81,13 @@ body {
     color: #fff;
 }
 
-#wrapper .rightmenu{
-    margin-left: 15px;
-}
-#wrapper .rightmenu li{
-    margin: 0px 10px;
-}
-#wrapper .rightmenu li a{
-    display: table;
-    position: relative;
-    padding: 9px 0px;
-}
-#wrapper .rightmenu li a span{
-    width: 40px;
-    height: 40px;
-    padding: 0px;
-    /* line-height: 40px;*/
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-    color: #000;
-    border: 1px solid #e5e5e5;
-    border-radius: 50%;
-}
-#wrapper .rightmenu a span.cart-count {
-    font-size: 10px;
-    color: #fff;
-    background: #862972;
-    width: 20px;
-    height: 20px;
-    line-height: 20px;
-    text-align: center;
-    border: 0px;
-    position: absolute;
-    top: 17px;
-    right: -5px;
-}
-#wrapper .rightmenu .dropdown-menu{
-    min-width: auto;
-    margin: 0px;
-    padding: 0px;
-}
-#wrapper .rightmenu .dropdown li {
-    margin: 0px;
-}
-#wrapper .rightmenu .dropdown li a{
-    padding: 9px 10px;
-    line-height: normal;
-    width: 100%;
-    border-bottom: solid 1px #eee;
-}
-#wrapper .rightmenu .dropdown li a:hover{
-    background-color: #862972;
-    color: #fff;
+
 }
 .menubar li.dropdown:hover > .dropdown-menu {
     display: block;
 }
 
-#wrapper .mega-dropdown {
-    position: static !important;
-}
-#wrapper .mega-dropdown-menu {
-    padding: 10px 0px;
-    background-color: #f7f5fb;
-    width: 100%;
-    text-align: center;
-    border-bottom: none;
-    box-shadow: 0px 8px 10px -6px #ababab;
-    -webkit-box-shadow: 0px 8px 15px -10px #ababab;
-}
+
 .mega-dropdown-menu > li.col-sm-3{
     width: 20%;
 }
@@ -249,9 +137,6 @@ body {
     color: #333;
     border: 1px solid #ddd;
 }
-
-
-
 
 
 
@@ -359,43 +244,6 @@ body {
 
 
 
-.sidenav2 {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    right: 0;
-    background-color: #f6f6f6;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 40px;
-    -webkit-box-shadow: 5px 0px 15px 5px rgba(131,201,194,0.2);
-    -moz-box-shadow: 5px 0px 15px 5px rgba(131,201,194,0.2);
-    box-shadow: 5px 0px 15px 5px rgba(131,201,194,0.2);
-}
-.sidenav2 a {
-    padding: 1px 8px 0px 0px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #333;
-    display: block;
-    transition: 0.3s
-}
-.sidenav2 a:hover, .offcanvas a:focus{
-    color: #000;
-}
-.sidenav2 .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-@media screen and (max-height: 450px) {
-    .sidenav2 {padding-top: 15px;}
-    .sidenav2 a {font-size: 18px;}
-}
 
 
 
@@ -510,6 +358,6 @@ body {
     position: relative;
     width: 100%;
     overflow: hidden;
-    max-height: 400
-    px;
+    max-height: 400px;
+}
 }}
